--- a/secret.html
+++ b/secret.html
@@ -9,6 +9,7 @@
   </head>
 <body>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  <body background="https://media.giphy.com/media/TeBpzQZRaBIC4/source.gif">
     <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
     <div class="marquee title">
