--- a/subscriptions.html
+++ b/subscriptions.html
@@ -12,8 +12,16 @@
             <tr>
                   <th>Basic</th>
                   <th>$29.99/mo</th>
-                  <th><p>Disney MEME</p><p>Know Your Meme TV</p></th>
+                  <th>Disney Meme, Know Your Meme TV, YouTube, Google Images, Bing, IGN, Meme Central</th>
             </tr>
+            <th>
+                  <th>Pro</th>
+                  <th>$39.99/mo</th>
+                  <th>Same channels from basic, Google Play TV, FAX, FA, FAA, NOBC, ZYX</th>
+            <tr>
+                  <th>Premium</th>
+                  <th>$59.99/mo</th>
+                  <th>Same channels from Pro, HBNO, Stairz, unnamed, null, FAM, Disney Family Memes, Meme Network, Tumblr, Twitter</th>
             </table>
       </body>
 </html>
