--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <link rel="icon" href="rainbowfrog.gif" type="image/gif">
     <title>meme man's site.</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
   </head>
   <body>
-    <body background="http://zabbyallen.com/user/pages/01.blog/freebie-friday-90s-inspired-backgrounds/pinkie-background.jpg">
+    <body class="90s-background">
     <!-- Marque is an outdated tag -->
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="354" height="76">
-<param name="movie" value="flashvortex.swf" />
-<param name="quality" value="best" />
-<param name="menu" value="true" />
-<param name="allowScriptAccess" value="sameDomain" />
-<embed src="flashvortex.swf" quality="best" menu="true" width="354" height="76" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" allowScriptAccess="sameDomain" />
-</object>
+      <param name="movie" value="flashvortex.swf" />
+      <param name="quality" value="best" />
+      <param name="menu" value="true" />
+      <param name="allowScriptAccess" value="sameDomain" />
+      <embed src="flashvortex.swf" quality="best" menu="true" width="354" height="76" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" allowScriptAccess="sameDomain" />
+    </object>
 
       <div class="marquee title">
-      Welcome to Meme Man's site
-    </div>
-        <div class="marquee title">
-      <a href="important.html">IMPORTANT INFORMATION!</p>
+        <span>Welcome to Meme Man's site</span>
+        <a href="important.html">IMPORTANT INFORMATION!</a>
     </div>
     <div class="nav">
       <ul>
