--- a/directory.html
+++ b/directory.html
@@ -2,3 +2,4 @@
 <p><a href="commonsensemedia/index.html">Common Sense Media (Parody)</a></p>
 <p><a href="Facebook.html">Facebook Alpha</a></p>
 <p><a href="game/intro.html">Game</a></p>
+<p><a href="subscriptions.html">Xfinity Memebox subscriptions</a></p>
