--- a/game/start.html
+++ b/game/start.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>The web site of my-succ-name</title>
+    <title>Beginning</title>
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <p>It's a beautiful afternoon.</p>
+    <p>It's a beautiful afternoon. The sun is shining, and everything seems perfect.</p>
+    <a href="lose.html"><button>Kill yourself.</button></a>
+    <a href="go.html"><button>Go to school</button></a>
   </body>
 </html>
