--- a/game/go.html
+++ b/game/go.html
@@ -9,6 +9,8 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <p>You go to school.</p>
+    <p>You go to school. School goes as normal. Eight period comes around, and everyone is in a good mood. Except for one person.</p>
+    <p>Then, someone says something offensive to him, and he starts going on a rage and starts beating people up.</p>
+    <a href="gethelp.html"><button>Get some help.</button></a>
   </body>
 </html>
