--- a/violation.html
+++ b/violation.html
@@ -1,4 +1,16 @@
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="rainbowfrog.gif" type="image/gif">
+    <title>meme man's site.</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
+  </head>
 <p>The FBI has detected you have commited the following offenses:</p>
 <ul>
-  <li>succ</li>
+  <li>leaking memes</li>
+  <li>hacking the meme database</li>
+  <li>loading legal bootlegs onto consoles</li>
 </ul>
+<p>You must pay a fine of $50,000 dollars to the government in 30 days or less or else you will go to internet jail.</p>
+<p>If you don't know how to pay the government money, kys</p>
