--- a/timeline.html
+++ b/timeline.html
@@ -1,1 +1,12 @@
-
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="rainbowfrog.gif" type="image/gif">
+    <title>meme man's site.</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
+  </head>
+<b>10 minutes ago</b>
+<p>I need help. Someone help me.</p>
+<b>24 minutes ago</b>
+<p>If this was from 24 minutes ago, you must watch all the previously aired episodes of 24: Legacy</p>
