--- a/timeline.html
+++ b/timeline.html
@@ -1,7 +1,7 @@
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="rainbowfrog.gif" type="image/gif">
-    <title>meme man's site.</title>
+    <link rel="icon" href="https://image.flaticon.com/icons/png/128/8/8800.png" type="image/gif">
+    <title>Glitter</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
@@ -10,3 +10,7 @@
 <p>I need help. Someone help me.</p>
 <b>24 minutes ago</b>
 <p>If this was from 24 minutes ago, you must watch all the previously aired episodes of 24: Legacy</p>
+<b>39 minutes ago</b>
+<p>no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no </p>
+<b>59 minutes ago</b>
+<p>I'm a meme now!</p>
