--- a/timeline.html
+++ b/timeline.html
@@ -6,11 +6,20 @@
     <script src="//code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
   </head>
+<div>
 <b>10 minutes ago</b>
 <p>I need help. Someone help me.</p>
+</div>
+<div>
 <b>24 minutes ago</b>
+<div>
 <p>If this was from 24 minutes ago, you must watch all the previously aired episodes of 24: Legacy</p>
+</div>
+<div>
 <b>39 minutes ago</b>
 <p>no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no no </p>
+  </div>
+  <div>
 <b>59 minutes ago</b>
 <p>I'm a meme now!</p>
+  </div>
