--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js" type="text/javascript"></script>
   </head>
   <body>
-    <body background="http://zabbyallen.com/user/pages/01.blog/freebie-friday-90s-inspired-backgrounds/pinkie-background.jpg">
+    <body style="background:url(http://zabbyallen.com/user/pages/01.blog/freebie-friday-90s-inspired-backgrounds/pinkie-background.jpg)">
     <!-- Marque is an outdated tag -->
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="354" height="76">
       <param name="movie" value="flashvortex.swf" />
